	also added support for two new escape sequences at the request of
	Cale Gibbard <gibbard@bfree.on.ca>.  "\e]Pnrrggbb" can now be used
	to modify the color palette at runtime, and "\e]R" will restore the
	defaults.  These are compatible with the Linux console.
	
-------------------------------------------------------------------------------
Mon Mar 27 12:48:09 PST 2000	Michael Jennings <mej@eterm.org>

	Some quick fixes from Cale Gibbard <gibbard@bfree.on.ca> for the color
	changing stuff.
	
-------------------------------------------------------------------------------
Mon Mar 27 19:08:03 PST 2000	Michael Jennings <mej@eterm.org>

	--shade and --tint have returned with the same syntax as before.
	
-------------------------------------------------------------------------------
Tue Mar 28 12:31:06 PST 2000	Michael Jennings <mej@eterm.org>

	You can tint by X color values (like "grey75" or "MidnightBlue" or
	"#8080ff").  Severely twisted. :-)
	
-------------------------------------------------------------------------------
Tue Mar 28 18:42:09 PST 2000	Michael Jennings <mej@eterm.org>

	Tint by number or color, and shade by percentage, are now available
	via the "\e]6;2;" escape sequence.  For example, "\e]6;2;shade;10\a"
	will shade the background by 10%.  "\e]6;2;tint;lightblue\a" will give
	the background a light blue tint.  "\e]6;2;shade;sa;30\a" will give a
	30% shade to the scrollbar anchor.
	
-------------------------------------------------------------------------------
Thu Mar 30 20:34:10 PST 2000	Michael Jennings <mej@eterm.org>

	Quick little option -q/--no-input.  It keeps Eterm from accepting
	keyboard input, and keeps the window manager from focusing it.  Useful
	for log tailers and such, maybe.  This feature was requested by
	Peter Ward <than@ilm.com>.  I will be adding an escape sequence to
	toggle this.
	
-------------------------------------------------------------------------------